--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
     "react-native": "0.68.2",
+    "react-native-circular-progress-indicator": "^4.4.0",
     "react-native-material-ripple": "^0.9.1",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
