--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
+    "expo-app-loading": "^2.0.0",
+    "expo-font": "~10.1.0",
     "expo-haptics": "^11.2.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
-    "react-native": "0.68.2",
+    "react-native": "^0.68.2",
     "react-native-circular-progress-indicator": "^4.4.0",
     "react-native-material-ripple": "^0.9.1",
-    "react-native-reanimated": "^2.9.1",
+    "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
