--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-sensors": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
