--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
     "expo-haptics": "~11.3.0",
+    "expo-sensors": "~11.4.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
@@ -29,6 +30,7 @@
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.0.0-rc.8",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
@@ -36,7 +38,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "expo-sensors": "~11.4.0"
+    "expo-notifications": "~0.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
