--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
     "expo-haptics": "~11.3.0",
+    "expo-notifications": "~0.16.1",
     "expo-sensors": "~11.4.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -25,6 +26,7 @@
     "react-dom": "18.0.0",
     "react-icons": "^4.4.0",
     "react-native": "0.69.6",
+    "react-native-bouncy-checkbox": "^3.0.5",
     "react-native-circular-progress-indicator": "^4.4.0",
     "react-native-material-buttons": "^0.6.0",
     "react-native-material-ripple": "^0.9.1",
@@ -36,9 +38,9 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
-    "expo-notifications": "~0.16.1"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
