--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "react-native-gesture-handler": "~2.5.0"
+    "react-native-gesture-handler": "~2.5.0",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
