--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "StudyHungry",
     "slug": "study-hungry",
+    "description": "An app that acts as a constant companion to help you battle procrastination.",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
