--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
@@ -28,6 +29,7 @@
     "react-native": "0.69.6",
     "react-native-bouncy-checkbox": "^3.0.5",
     "react-native-circular-progress-indicator": "^4.4.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-material-buttons": "^0.6.0",
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
@@ -41,8 +43,7 @@
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "react-native-gesture-handler": "~2.5.0",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "expo-web-browser": "~11.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
