--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "expo-updates": "~0.14.7"
+    "expo-updates": "~0.14.7",
+    "expo-av": "~12.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
