--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@expo-google-fonts/nunito": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.2",
-    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/stack": "^6.3.5",
     "expo": "^46.0.0",
     "expo-app-loading": "~2.1.0",
+    "expo-av": "~12.0.4",
     "expo-font": "~10.2.0",
     "expo-haptics": "~11.3.0",
     "expo-notifications": "~0.16.1",
     "expo-sensors": "~11.4.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.7",
     "expo-web-browser": "~11.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -43,9 +46,7 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
-    "expo-updates": "~0.14.7",
-    "expo-av": "~12.0.4"
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
