--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-select-dropdown": "^3.0.3",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-uuid": "^2.0.1",
