--- a/app.json
+++ b/app.json
@@ -15,11 +15,10 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true,
+      "supportsTablet": false,
+      "buildNumber": "2",
       "bundleIdentifier": "com.shaux.studyhungry"
     },
     "android": {
